--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 dash==3.2.0
 dash-bootstrap-components==2.0.4
 Flask==3.1.2
+gunicorn==23.0.0
 idna==3.11
 importlib_metadata==8.7.0
 itsdangerous==2.2.0
